src/scripts/envoy-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deployment
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy-dev:78dfea2cc80da8a89d868dc87a4b14f48d141500
          ports:
            - containerPort: 10000
            - containerPort: 9901
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - mountPath: /etc/envoy/envoy.yaml
              name: envoy-volume
      volumes:
        - hostPath:
            path: /mnt/aps/tmp/envoy/envoy.yaml
            type: ""
          name: envoy-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    svc: envoy-svc
  name: envoy-svc
spec:
  ports:
    - name: tcp
      port: 10000
      protocol: TCP
      targetPort: 10000
      nodePort: 31750
    - name: admin
      port: 9901
      targetPort: 9901
      protocol: TCP
  selector:
    app: envoy
  type: NodePort
